--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "@ngxs/storage-plugin": "^3.5.1",
     "@ngxs/store": "^3.5.1",
+    "color-interpolate": "^1.0.5",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
